# OpenGLRestaurant

MinimumNecessaryForExecution/objects/restaurant/: Resto_Upload.mtl
MinimumNecessaryForExecution/objects/restaurant2/: Resto_Upload.mtl
MinimumNecessaryForExecution/shaders/: depth.frag  depth.vert  depthDir.vert  lightCube.glsl  renderWithShadows.vert  shaderStart.frag  shaderStart.vert
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Constants.h  DirLight.cpp  DirLight.h  Mesh.hpp  ModelTransforms.cpp  ModelTransforms.h  PointLight.cpp  PointLight.h  RenderModes.h  SceneLighting.cpp  SceneLighting.h  Shader.cpp  Shader.hpp  TransformsAndLighting.cpp  TransformsAndLighting.h  main.cpp
